# wildetect

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  BENCHMARK_INTEGRATION_PLAN.md  README-refactor.md  README.md  api-creation.md  docs.html  example.env  index.html  launch_ui.bat  lunr-index-1774787852313.json  lunr-index-1774788721506.json  lunr-index.json  main.py  markdown-page.html  mkdocs.yml  pyproject.toml  requirements.txt  search-doc-1774787234592.json  search-doc-1774787852313.json  search-doc-1774788721506.json  sitemap.xml  test_updated_visualization.py  wildetect  wildetect.bat
checkpoints/: config.yaml
config/: benchmark.yaml  census.yaml  class_mapping.json  config.yaml  detection.yaml  detector_registration.yaml  example_detection.yaml  extract-gps.yaml  inference.yaml  settings.yaml  tile-gps-matching.yaml  visualization.yaml
docs/: DOCUMENTATION.md  PHASE2_FEATURES.md  fiftyone_integration.md  index.md  modular_architecture.md  script-navigator.html  script-navigator.md  troubleshooting.html  troubleshooting.md
examples/: api_example.py  campaign_manager_example.py  census_data_example.py  cli_census_example.py  cli_ui_integration_example.py  dataloader_benchmark_example.py  duplicate_removal_stats_example.py  fiftyone_geolocation_example.py  iou_statistics_example.py  (+11 more)
wildata/: .env.example  README.md  launch_ui.bat  pyproject.toml
wildata/configs/: bulk-import-config-example.yaml  bulk-import-train.yaml  bulk-import-val.yaml  bulk-roi-create-config.yaml  gps-update-config-example.yaml  import-config-example.yaml  label_studio_config.xml  roi-create-config.yaml
wildata/docs/: API_README.md  cli_usage.md
wildata/examples/: example.py  examples.ipynb  exif_gps_batch_update_example.py  ls_conversion_example.py  mock_csv.csv  roi_adapter_example.py  roi_dataset_example.py  workflow.bat
wildata/scripts/: bulk-import-dataset.bat  convert-ls-to-coco.bat  create-roi-dataset.bat  dvc-setup.bat  import-dataset-example.bat  launch_api.bat  running_tests.bat  update-gps-example.bat  visualize_data.bat
wildata/src/wildata/: config.py  logging_config.py  ui.py  visualization.py
wildata/src/wildata/adapters/: base_adapter.py  roi_adapter.py  utils.py  yolo_adapter.py
wildata/src/wildata/api/: __init__.py  cli.py  config.py  dependencies.py  exceptions.py  main.py
wildata/src/wildata/api/models/: __init__.py  jobs.py  requests.py  responses.py
wildata/src/wildata/api/routers/: __init__.py  datasets.py  gps.py  health.py  jobs.py  roi.py  visualization.py
wildata/src/wildata/api/services/: __init__.py  job_queue.py  task_handlers.py
wildata/src/wildata/cli/: __init__.py  cli.py  import_logic.py  models.py  roi_logic.py  utils.py
wildata/src/wildata/converters/: __init__.py  base_converter.py  labelstudio_converter.py  utils.py  yolo_to_master.py
wildata/src/wildata/converters/labelstudio/: __init__.py  labelstudio_converter.py  labelstudio_parser.py  labelstudio_schemas.py
wildata/src/wildata/datasets/: detection.py  roi.py
wildata/src/wildata/partitioning/: __init__.py  camp_partitioner.py  merger.py  partitioning_pipeline.py  spatial_partitioner.py  strategies.py  utils.py
wildata/src/wildata/pipeline/: __init__.py  data_manager.py  data_pipeline.py  dvc_manager.py  framework_data_manager.py  loader.py  path_manager.py
wildata/src/wildata/transformations/: __init__.py  augmentation_transformer.py  base_transformer.py  bbox_clipping_transformer.py  tiling_transformer.py  transformation_pipeline.py
wildata/src/wildata/validators/: __init__.py  coco_validator.py  yolo_validator.py
wildata/tests/api/: conftest.py  test_basic.py  test_endpoints.py
wildata/tests/general/: test-cli.py  test_adapters.py  test_converters.py  test_invalid_annotation_filtering.py  test_merger.py  test_partitioning.py  test_roi_adapter.py  test_roi_filtering.py  test_transformations.py  test_validators.py
(+647 files in other folders)
