[project]
name = "wildetect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "fiftyone>=1.7.0",
    "geopy>=2.4.1",
    "huggingface>=0.0.1",
    "pillow>=11.3.0",
    "torch==2.0.0",
    "ultralytics>=8.3.162",
    "utm>=0.8.1",
]
